portfolio items to scrollable x

--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -1,6 +1,6 @@
 .neomorphic {
     border-radius: 0px;
-    background: linear-gradient(145deg, #cacaca, #f0f0f0);
-    box-shadow: 41px 41px 82px #bebebe,
+    background: linear-gradient(145deg, #eaeaea, #f0f0f0);
+    box-shadow: 41px 41px 82px #ebebeb,
         -41px -41px 82px #ffffff;
 }
