--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap');
 
+body,
+#__next {
+    margin: 0;
+    padding: 0;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
